Deployment/solr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr-deployment
  labels:
    app: solr
spec:
  replicas: 10
  selector:
    matchLabels:
      app: solr
  minReadySeconds: 60    
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: solr     
    spec:
      containers:
      - name: solr
        image: solr
        ports:
        - containerPort: 8983

---
apiVersion: v1
kind: Service
metadata:
  name: solr-service
spec:
  selector:
    app: solr
  type: ClusterIP
  ports:
  - protocol: TCP
    targetPort: 8983
    port: 8081
